robballen75-Salesforce/4-7-15/src/objects/Web_User_Detail__c.object
<CustomObject>
    <description>Contact attributes assigned when a Web User Account is created and subsequently updated</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact the WebUser ID was created for</description>
        <inlineHelpText>Contact the WebUser ID was created for</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Web User Details</relationshipLabel>
        <relationshipName>Web_User_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <description>Last Date/Time this Contact logged in to the web server.</description>
        <inlineHelpText>Last Date/Time this Contact logged in to the web server.</inlineHelpText>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_Count__c</fullName>
        <description>Login Count</description>
        <inlineHelpText>Number of times this Contact has logged in to the web server.</inlineHelpText>
        <label>Login Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Text Password</description>
        <inlineHelpText>Text Password</inlineHelpText>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Web Username used to log in</description>
        <inlineHelpText>Web Username used to log in</inlineHelpText>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebUser_ID__c</fullName>
        <description>Unique ID assigned when Contact record is created by Web Server</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID assigned when Contact record is created by Web Server</inlineHelpText>
        <label>WebUser ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Web User Detail</label>
    <nameField>
        <label>Web User Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>